--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
   width: 100vw;
   height: 100vh;
 
-  background-image: url("../img/bitcoin-and-computer-graphic-card.jpg");
+  background-image: url("../img/bitcoin-and-computer-graphic-card.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
